Bug 590386 - <input type='file'> should not use more than one filter. r=sicking a=blocking